tests/errors/sem_aug_sub_boolean.kt
fun main() {
var flag: Boolean = true
flag -= true
}
